syntax = "proto3";

package products;

option go_package = "products/proto";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  string product_id = 1;
}

message ProductResponse {
  string product_id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}
